src/hammer_fgd/hammer_fgd.re2c.output
Terminals unused in grammar

    EndOfFile
    Comment


Grammar

    0 $accept: FGDFile $end

    1 FGDFile: classesOpt

    2 classesOpt: classesOpt class
    3           | %empty

    4 class: SolidClassDef
    5      | PointClassDef
    6      | BaseClassDef

    7 SolidClassDef: "@SolidClass" CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]"

    8 PointClassDef: "@PointClass" CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]"

    9 BaseClassDef: "@BaseClass" CtorsOpt "=" Identifier "[" ClassFieldsOpt "]"

   10 CtorsOpt: CtorsOpt Ctor
   11         | %empty

   12 Ctor: IconspriteDefOpt
   13     | StudioDefOpt
   14     | BoundingBoxDefOpt
   15     | BaseClassRefOpt
   16     | SpriteDefOpt
   17     | ColorDefOpt

   18 ColorDefOpt: "color" "(" Number Number Number ")"

   19 BoundingBoxDefOpt: "size" "(" Number Number Number "," Number Number Number ")"

   20 StudioDefOpt: "studio" "(" StringLiteralOpt ")"

   21 SpriteDefOpt: "sprite" "(" StringLiteralOpt ")"

   22 IconspriteDefOpt: "iconsprite" "(" StringLiteral ")"

   23 BaseClassRefOpt: "base" "(" identifierListOpt ")"

   24 StringLiteralOpt: StringLiteral
   25                 | %empty

   26 identifierListOpt: identifierListOpt identifierList
   27                  | %empty

   28 identifierList: identifierList "," Identifier
   29               | Identifier

   30 ClassFieldsOpt: ClassFieldsOpt ClassFieldDef
   31               | %empty

   32 ClassFieldDef: Identifier "(" TypeId ")" ":" StringLiteral DefaultValueOpt
   33              | Identifier "(" "flags" ")" "=" "[" FlagsValues "]"
   34              | Identifier "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"
   35              | "model" "(" ModelType ")" ":" StringLiteral DefaultValueOpt
   36              | "color" "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

   37 ModelType: "studio"
   38          | "sprite"

   39 FlagsValues: FlagsValues FlagValue
   40            | %empty

   41 FlagValue: Number ":" StringLiteral ":" Number

   42 EnumValues: EnumValues EnumValue
   43           | %empty

   44 EnumValue: Number ":" StringLiteral

   45 TypeId: "integer"
   46       | "color255"
   47       | "string"
   48       | "sprite"
   49       | "studio"
   50       | "target_destination"
   51       | "target_source"
   52       | "sound"

   53 DefaultValueOpt: ":" StringLiteral
   54                | ":" Number
   55                | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "@SolidClass" (258) 7
    "@BaseClass" (259) 9
    "@PointClass" (260) 8
    "=" (261) 7 8 9 33 34 36
    ":" (262) 7 8 32 34 35 36 41 44 53 54
    "," (263) 19 28
    StringLiteral <std::string> (264) 7 8 22 24 32 34 35 36 41 44 53
    Identifier <std::string> (265) 7 8 9 28 29 32 33 34
    Number (266) 18 19 34 36 41 44 54
    "base" (267) 23
    "(" (268) 18 19 20 21 22 23 32 33 34 35 36
    ")" (269) 18 19 20 21 22 23 32 33 34 35 36
    "[" (270) 7 8 9 33 34 36
    "]" (271) 7 8 9 33 34 36
    "size" (272) 19
    "iconsprite" (273) 22
    "color" (274) 18 36
    "integer" (275) 45
    "color255" (276) 46
    "string" (277) 47
    "sprite" (278) 21 38 48
    "studio" (279) 20 37 49
    "flags" (280) 33
    "choices" (281) 34 36
    "model" (282) 35
    "target_source" (283) 51
    "target_destination" (284) 50
    "sound" (285) 52
    EndOfFile (286)
    Comment (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    FGDFile (34)
        on left: 1
        on right: 0
    classesOpt (35)
        on left: 2 3
        on right: 1 2
    class (36)
        on left: 4 5 6
        on right: 2
    SolidClassDef (37)
        on left: 7
        on right: 4
    PointClassDef (38)
        on left: 8
        on right: 5
    BaseClassDef (39)
        on left: 9
        on right: 6
    CtorsOpt (40)
        on left: 10 11
        on right: 7 8 9 10
    Ctor (41)
        on left: 12 13 14 15 16 17
        on right: 10
    ColorDefOpt (42)
        on left: 18
        on right: 17
    BoundingBoxDefOpt (43)
        on left: 19
        on right: 14
    StudioDefOpt (44)
        on left: 20
        on right: 13
    SpriteDefOpt (45)
        on left: 21
        on right: 16
    IconspriteDefOpt (46)
        on left: 22
        on right: 12
    BaseClassRefOpt (47)
        on left: 23
        on right: 15
    StringLiteralOpt (48)
        on left: 24 25
        on right: 20 21
    identifierListOpt (49)
        on left: 26 27
        on right: 23 26
    identifierList (50)
        on left: 28 29
        on right: 26 28
    ClassFieldsOpt (51)
        on left: 30 31
        on right: 7 8 9 30
    ClassFieldDef (52)
        on left: 32 33 34 35 36
        on right: 30
    ModelType (53)
        on left: 37 38
        on right: 35
    FlagsValues (54)
        on left: 39 40
        on right: 33 39
    FlagValue (55)
        on left: 41
        on right: 39
    EnumValues (56)
        on left: 42 43
        on right: 34 36 42
    EnumValue (57)
        on left: 44
        on right: 42
    TypeId (58)
        on left: 45 46 47 48 49 50 51 52
        on right: 32
    DefaultValueOpt (59)
        on left: 53 54 55
        on right: 32 35


State 0

    0 $accept: . FGDFile $end
    1 FGDFile: . classesOpt
    2 classesOpt: . classesOpt class
    3           | %empty .

    $default  reduce using rule 3 (classesOpt)

    FGDFile     go to state 1
    classesOpt  go to state 2


State 1

    0 $accept: FGDFile . $end

    $end  shift, and go to state 3


State 2

    1 FGDFile: classesOpt .  [$end]
    2 classesOpt: classesOpt . class
    4 class: . SolidClassDef
    5      | . PointClassDef
    6      | . BaseClassDef
    7 SolidClassDef: . "@SolidClass" CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]"
    8 PointClassDef: . "@PointClass" CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]"
    9 BaseClassDef: . "@BaseClass" CtorsOpt "=" Identifier "[" ClassFieldsOpt "]"

    "@SolidClass"  shift, and go to state 4
    "@BaseClass"   shift, and go to state 5
    "@PointClass"  shift, and go to state 6

    $default  reduce using rule 1 (FGDFile)

    class          go to state 7
    SolidClassDef  go to state 8
    PointClassDef  go to state 9
    BaseClassDef   go to state 10


State 3

    0 $accept: FGDFile $end .

    $default  accept


State 4

    7 SolidClassDef: "@SolidClass" . CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]"
   10 CtorsOpt: . CtorsOpt Ctor
   11         | %empty .

    $default  reduce using rule 11 (CtorsOpt)

    CtorsOpt  go to state 11


State 5

    9 BaseClassDef: "@BaseClass" . CtorsOpt "=" Identifier "[" ClassFieldsOpt "]"
   10 CtorsOpt: . CtorsOpt Ctor
   11         | %empty .

    $default  reduce using rule 11 (CtorsOpt)

    CtorsOpt  go to state 12


State 6

    8 PointClassDef: "@PointClass" . CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]"
   10 CtorsOpt: . CtorsOpt Ctor
   11         | %empty .

    $default  reduce using rule 11 (CtorsOpt)

    CtorsOpt  go to state 13


State 7

    2 classesOpt: classesOpt class .

    $default  reduce using rule 2 (classesOpt)


State 8

    4 class: SolidClassDef .

    $default  reduce using rule 4 (class)


State 9

    5 class: PointClassDef .

    $default  reduce using rule 5 (class)


State 10

    6 class: BaseClassDef .

    $default  reduce using rule 6 (class)


State 11

    7 SolidClassDef: "@SolidClass" CtorsOpt . "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]"
   10 CtorsOpt: CtorsOpt . Ctor
   12 Ctor: . IconspriteDefOpt
   13     | . StudioDefOpt
   14     | . BoundingBoxDefOpt
   15     | . BaseClassRefOpt
   16     | . SpriteDefOpt
   17     | . ColorDefOpt
   18 ColorDefOpt: . "color" "(" Number Number Number ")"
   19 BoundingBoxDefOpt: . "size" "(" Number Number Number "," Number Number Number ")"
   20 StudioDefOpt: . "studio" "(" StringLiteralOpt ")"
   21 SpriteDefOpt: . "sprite" "(" StringLiteralOpt ")"
   22 IconspriteDefOpt: . "iconsprite" "(" StringLiteral ")"
   23 BaseClassRefOpt: . "base" "(" identifierListOpt ")"

    "="           shift, and go to state 14
    "base"        shift, and go to state 15
    "size"        shift, and go to state 16
    "iconsprite"  shift, and go to state 17
    "color"       shift, and go to state 18
    "sprite"      shift, and go to state 19
    "studio"      shift, and go to state 20

    Ctor               go to state 21
    ColorDefOpt        go to state 22
    BoundingBoxDefOpt  go to state 23
    StudioDefOpt       go to state 24
    SpriteDefOpt       go to state 25
    IconspriteDefOpt   go to state 26
    BaseClassRefOpt    go to state 27


State 12

    9 BaseClassDef: "@BaseClass" CtorsOpt . "=" Identifier "[" ClassFieldsOpt "]"
   10 CtorsOpt: CtorsOpt . Ctor
   12 Ctor: . IconspriteDefOpt
   13     | . StudioDefOpt
   14     | . BoundingBoxDefOpt
   15     | . BaseClassRefOpt
   16     | . SpriteDefOpt
   17     | . ColorDefOpt
   18 ColorDefOpt: . "color" "(" Number Number Number ")"
   19 BoundingBoxDefOpt: . "size" "(" Number Number Number "," Number Number Number ")"
   20 StudioDefOpt: . "studio" "(" StringLiteralOpt ")"
   21 SpriteDefOpt: . "sprite" "(" StringLiteralOpt ")"
   22 IconspriteDefOpt: . "iconsprite" "(" StringLiteral ")"
   23 BaseClassRefOpt: . "base" "(" identifierListOpt ")"

    "="           shift, and go to state 28
    "base"        shift, and go to state 15
    "size"        shift, and go to state 16
    "iconsprite"  shift, and go to state 17
    "color"       shift, and go to state 18
    "sprite"      shift, and go to state 19
    "studio"      shift, and go to state 20

    Ctor               go to state 21
    ColorDefOpt        go to state 22
    BoundingBoxDefOpt  go to state 23
    StudioDefOpt       go to state 24
    SpriteDefOpt       go to state 25
    IconspriteDefOpt   go to state 26
    BaseClassRefOpt    go to state 27


State 13

    8 PointClassDef: "@PointClass" CtorsOpt . "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]"
   10 CtorsOpt: CtorsOpt . Ctor
   12 Ctor: . IconspriteDefOpt
   13     | . StudioDefOpt
   14     | . BoundingBoxDefOpt
   15     | . BaseClassRefOpt
   16     | . SpriteDefOpt
   17     | . ColorDefOpt
   18 ColorDefOpt: . "color" "(" Number Number Number ")"
   19 BoundingBoxDefOpt: . "size" "(" Number Number Number "," Number Number Number ")"
   20 StudioDefOpt: . "studio" "(" StringLiteralOpt ")"
   21 SpriteDefOpt: . "sprite" "(" StringLiteralOpt ")"
   22 IconspriteDefOpt: . "iconsprite" "(" StringLiteral ")"
   23 BaseClassRefOpt: . "base" "(" identifierListOpt ")"

    "="           shift, and go to state 29
    "base"        shift, and go to state 15
    "size"        shift, and go to state 16
    "iconsprite"  shift, and go to state 17
    "color"       shift, and go to state 18
    "sprite"      shift, and go to state 19
    "studio"      shift, and go to state 20

    Ctor               go to state 21
    ColorDefOpt        go to state 22
    BoundingBoxDefOpt  go to state 23
    StudioDefOpt       go to state 24
    SpriteDefOpt       go to state 25
    IconspriteDefOpt   go to state 26
    BaseClassRefOpt    go to state 27


State 14

    7 SolidClassDef: "@SolidClass" CtorsOpt "=" . Identifier ":" StringLiteral "[" ClassFieldsOpt "]"

    Identifier  shift, and go to state 30


State 15

   23 BaseClassRefOpt: "base" . "(" identifierListOpt ")"

    "("  shift, and go to state 31


State 16

   19 BoundingBoxDefOpt: "size" . "(" Number Number Number "," Number Number Number ")"

    "("  shift, and go to state 32


State 17

   22 IconspriteDefOpt: "iconsprite" . "(" StringLiteral ")"

    "("  shift, and go to state 33


State 18

   18 ColorDefOpt: "color" . "(" Number Number Number ")"

    "("  shift, and go to state 34


State 19

   21 SpriteDefOpt: "sprite" . "(" StringLiteralOpt ")"

    "("  shift, and go to state 35


State 20

   20 StudioDefOpt: "studio" . "(" StringLiteralOpt ")"

    "("  shift, and go to state 36


State 21

   10 CtorsOpt: CtorsOpt Ctor .

    $default  reduce using rule 10 (CtorsOpt)


State 22

   17 Ctor: ColorDefOpt .

    $default  reduce using rule 17 (Ctor)


State 23

   14 Ctor: BoundingBoxDefOpt .

    $default  reduce using rule 14 (Ctor)


State 24

   13 Ctor: StudioDefOpt .

    $default  reduce using rule 13 (Ctor)


State 25

   16 Ctor: SpriteDefOpt .

    $default  reduce using rule 16 (Ctor)


State 26

   12 Ctor: IconspriteDefOpt .

    $default  reduce using rule 12 (Ctor)


State 27

   15 Ctor: BaseClassRefOpt .

    $default  reduce using rule 15 (Ctor)


State 28

    9 BaseClassDef: "@BaseClass" CtorsOpt "=" . Identifier "[" ClassFieldsOpt "]"

    Identifier  shift, and go to state 37


State 29

    8 PointClassDef: "@PointClass" CtorsOpt "=" . Identifier ":" StringLiteral "[" ClassFieldsOpt "]"

    Identifier  shift, and go to state 38


State 30

    7 SolidClassDef: "@SolidClass" CtorsOpt "=" Identifier . ":" StringLiteral "[" ClassFieldsOpt "]"

    ":"  shift, and go to state 39


State 31

   23 BaseClassRefOpt: "base" "(" . identifierListOpt ")"
   26 identifierListOpt: . identifierListOpt identifierList
   27                  | %empty .

    $default  reduce using rule 27 (identifierListOpt)

    identifierListOpt  go to state 40


State 32

   19 BoundingBoxDefOpt: "size" "(" . Number Number Number "," Number Number Number ")"

    Number  shift, and go to state 41


State 33

   22 IconspriteDefOpt: "iconsprite" "(" . StringLiteral ")"

    StringLiteral  shift, and go to state 42


State 34

   18 ColorDefOpt: "color" "(" . Number Number Number ")"

    Number  shift, and go to state 43


State 35

   21 SpriteDefOpt: "sprite" "(" . StringLiteralOpt ")"
   24 StringLiteralOpt: . StringLiteral
   25                 | %empty .  [")"]

    StringLiteral  shift, and go to state 44

    $default  reduce using rule 25 (StringLiteralOpt)

    StringLiteralOpt  go to state 45


State 36

   20 StudioDefOpt: "studio" "(" . StringLiteralOpt ")"
   24 StringLiteralOpt: . StringLiteral
   25                 | %empty .  [")"]

    StringLiteral  shift, and go to state 44

    $default  reduce using rule 25 (StringLiteralOpt)

    StringLiteralOpt  go to state 46


State 37

    9 BaseClassDef: "@BaseClass" CtorsOpt "=" Identifier . "[" ClassFieldsOpt "]"

    "["  shift, and go to state 47


State 38

    8 PointClassDef: "@PointClass" CtorsOpt "=" Identifier . ":" StringLiteral "[" ClassFieldsOpt "]"

    ":"  shift, and go to state 48


State 39

    7 SolidClassDef: "@SolidClass" CtorsOpt "=" Identifier ":" . StringLiteral "[" ClassFieldsOpt "]"

    StringLiteral  shift, and go to state 49


State 40

   23 BaseClassRefOpt: "base" "(" identifierListOpt . ")"
   26 identifierListOpt: identifierListOpt . identifierList
   28 identifierList: . identifierList "," Identifier
   29               | . Identifier

    Identifier  shift, and go to state 50
    ")"         shift, and go to state 51

    identifierList  go to state 52


State 41

   19 BoundingBoxDefOpt: "size" "(" Number . Number Number "," Number Number Number ")"

    Number  shift, and go to state 53


State 42

   22 IconspriteDefOpt: "iconsprite" "(" StringLiteral . ")"

    ")"  shift, and go to state 54


State 43

   18 ColorDefOpt: "color" "(" Number . Number Number ")"

    Number  shift, and go to state 55


State 44

   24 StringLiteralOpt: StringLiteral .

    $default  reduce using rule 24 (StringLiteralOpt)


State 45

   21 SpriteDefOpt: "sprite" "(" StringLiteralOpt . ")"

    ")"  shift, and go to state 56


State 46

   20 StudioDefOpt: "studio" "(" StringLiteralOpt . ")"

    ")"  shift, and go to state 57


State 47

    9 BaseClassDef: "@BaseClass" CtorsOpt "=" Identifier "[" . ClassFieldsOpt "]"
   30 ClassFieldsOpt: . ClassFieldsOpt ClassFieldDef
   31               | %empty .

    $default  reduce using rule 31 (ClassFieldsOpt)

    ClassFieldsOpt  go to state 58


State 48

    8 PointClassDef: "@PointClass" CtorsOpt "=" Identifier ":" . StringLiteral "[" ClassFieldsOpt "]"

    StringLiteral  shift, and go to state 59


State 49

    7 SolidClassDef: "@SolidClass" CtorsOpt "=" Identifier ":" StringLiteral . "[" ClassFieldsOpt "]"

    "["  shift, and go to state 60


State 50

   29 identifierList: Identifier .

    $default  reduce using rule 29 (identifierList)


State 51

   23 BaseClassRefOpt: "base" "(" identifierListOpt ")" .

    $default  reduce using rule 23 (BaseClassRefOpt)


State 52

   26 identifierListOpt: identifierListOpt identifierList .  [Identifier, ")"]
   28 identifierList: identifierList . "," Identifier

    ","  shift, and go to state 61

    $default  reduce using rule 26 (identifierListOpt)


State 53

   19 BoundingBoxDefOpt: "size" "(" Number Number . Number "," Number Number Number ")"

    Number  shift, and go to state 62


State 54

   22 IconspriteDefOpt: "iconsprite" "(" StringLiteral ")" .

    $default  reduce using rule 22 (IconspriteDefOpt)


State 55

   18 ColorDefOpt: "color" "(" Number Number . Number ")"

    Number  shift, and go to state 63


State 56

   21 SpriteDefOpt: "sprite" "(" StringLiteralOpt ")" .

    $default  reduce using rule 21 (SpriteDefOpt)


State 57

   20 StudioDefOpt: "studio" "(" StringLiteralOpt ")" .

    $default  reduce using rule 20 (StudioDefOpt)


State 58

    9 BaseClassDef: "@BaseClass" CtorsOpt "=" Identifier "[" ClassFieldsOpt . "]"
   30 ClassFieldsOpt: ClassFieldsOpt . ClassFieldDef
   32 ClassFieldDef: . Identifier "(" TypeId ")" ":" StringLiteral DefaultValueOpt
   33              | . Identifier "(" "flags" ")" "=" "[" FlagsValues "]"
   34              | . Identifier "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"
   35              | . "model" "(" ModelType ")" ":" StringLiteral DefaultValueOpt
   36              | . "color" "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    Identifier  shift, and go to state 64
    "]"         shift, and go to state 65
    "color"     shift, and go to state 66
    "model"     shift, and go to state 67

    ClassFieldDef  go to state 68


State 59

    8 PointClassDef: "@PointClass" CtorsOpt "=" Identifier ":" StringLiteral . "[" ClassFieldsOpt "]"

    "["  shift, and go to state 69


State 60

    7 SolidClassDef: "@SolidClass" CtorsOpt "=" Identifier ":" StringLiteral "[" . ClassFieldsOpt "]"
   30 ClassFieldsOpt: . ClassFieldsOpt ClassFieldDef
   31               | %empty .

    $default  reduce using rule 31 (ClassFieldsOpt)

    ClassFieldsOpt  go to state 70


State 61

   28 identifierList: identifierList "," . Identifier

    Identifier  shift, and go to state 71


State 62

   19 BoundingBoxDefOpt: "size" "(" Number Number Number . "," Number Number Number ")"

    ","  shift, and go to state 72


State 63

   18 ColorDefOpt: "color" "(" Number Number Number . ")"

    ")"  shift, and go to state 73


State 64

   32 ClassFieldDef: Identifier . "(" TypeId ")" ":" StringLiteral DefaultValueOpt
   33              | Identifier . "(" "flags" ")" "=" "[" FlagsValues "]"
   34              | Identifier . "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    "("  shift, and go to state 74


State 65

    9 BaseClassDef: "@BaseClass" CtorsOpt "=" Identifier "[" ClassFieldsOpt "]" .

    $default  reduce using rule 9 (BaseClassDef)


State 66

   36 ClassFieldDef: "color" . "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    "("  shift, and go to state 75


State 67

   35 ClassFieldDef: "model" . "(" ModelType ")" ":" StringLiteral DefaultValueOpt

    "("  shift, and go to state 76


State 68

   30 ClassFieldsOpt: ClassFieldsOpt ClassFieldDef .

    $default  reduce using rule 30 (ClassFieldsOpt)


State 69

    8 PointClassDef: "@PointClass" CtorsOpt "=" Identifier ":" StringLiteral "[" . ClassFieldsOpt "]"
   30 ClassFieldsOpt: . ClassFieldsOpt ClassFieldDef
   31               | %empty .

    $default  reduce using rule 31 (ClassFieldsOpt)

    ClassFieldsOpt  go to state 77


State 70

    7 SolidClassDef: "@SolidClass" CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt . "]"
   30 ClassFieldsOpt: ClassFieldsOpt . ClassFieldDef
   32 ClassFieldDef: . Identifier "(" TypeId ")" ":" StringLiteral DefaultValueOpt
   33              | . Identifier "(" "flags" ")" "=" "[" FlagsValues "]"
   34              | . Identifier "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"
   35              | . "model" "(" ModelType ")" ":" StringLiteral DefaultValueOpt
   36              | . "color" "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    Identifier  shift, and go to state 64
    "]"         shift, and go to state 78
    "color"     shift, and go to state 66
    "model"     shift, and go to state 67

    ClassFieldDef  go to state 68


State 71

   28 identifierList: identifierList "," Identifier .

    $default  reduce using rule 28 (identifierList)


State 72

   19 BoundingBoxDefOpt: "size" "(" Number Number Number "," . Number Number Number ")"

    Number  shift, and go to state 79


State 73

   18 ColorDefOpt: "color" "(" Number Number Number ")" .

    $default  reduce using rule 18 (ColorDefOpt)


State 74

   32 ClassFieldDef: Identifier "(" . TypeId ")" ":" StringLiteral DefaultValueOpt
   33              | Identifier "(" . "flags" ")" "=" "[" FlagsValues "]"
   34              | Identifier "(" . "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"
   45 TypeId: . "integer"
   46       | . "color255"
   47       | . "string"
   48       | . "sprite"
   49       | . "studio"
   50       | . "target_destination"
   51       | . "target_source"
   52       | . "sound"

    "integer"             shift, and go to state 80
    "color255"            shift, and go to state 81
    "string"              shift, and go to state 82
    "sprite"              shift, and go to state 83
    "studio"              shift, and go to state 84
    "flags"               shift, and go to state 85
    "choices"             shift, and go to state 86
    "target_source"       shift, and go to state 87
    "target_destination"  shift, and go to state 88
    "sound"               shift, and go to state 89

    TypeId  go to state 90


State 75

   36 ClassFieldDef: "color" "(" . "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    "choices"  shift, and go to state 91


State 76

   35 ClassFieldDef: "model" "(" . ModelType ")" ":" StringLiteral DefaultValueOpt
   37 ModelType: . "studio"
   38          | . "sprite"

    "sprite"  shift, and go to state 92
    "studio"  shift, and go to state 93

    ModelType  go to state 94


State 77

    8 PointClassDef: "@PointClass" CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt . "]"
   30 ClassFieldsOpt: ClassFieldsOpt . ClassFieldDef
   32 ClassFieldDef: . Identifier "(" TypeId ")" ":" StringLiteral DefaultValueOpt
   33              | . Identifier "(" "flags" ")" "=" "[" FlagsValues "]"
   34              | . Identifier "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"
   35              | . "model" "(" ModelType ")" ":" StringLiteral DefaultValueOpt
   36              | . "color" "(" "choices" ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    Identifier  shift, and go to state 64
    "]"         shift, and go to state 95
    "color"     shift, and go to state 66
    "model"     shift, and go to state 67

    ClassFieldDef  go to state 68


State 78

    7 SolidClassDef: "@SolidClass" CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]" .

    $default  reduce using rule 7 (SolidClassDef)


State 79

   19 BoundingBoxDefOpt: "size" "(" Number Number Number "," Number . Number Number ")"

    Number  shift, and go to state 96


State 80

   45 TypeId: "integer" .

    $default  reduce using rule 45 (TypeId)


State 81

   46 TypeId: "color255" .

    $default  reduce using rule 46 (TypeId)


State 82

   47 TypeId: "string" .

    $default  reduce using rule 47 (TypeId)


State 83

   48 TypeId: "sprite" .

    $default  reduce using rule 48 (TypeId)


State 84

   49 TypeId: "studio" .

    $default  reduce using rule 49 (TypeId)


State 85

   33 ClassFieldDef: Identifier "(" "flags" . ")" "=" "[" FlagsValues "]"

    ")"  shift, and go to state 97


State 86

   34 ClassFieldDef: Identifier "(" "choices" . ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    ")"  shift, and go to state 98


State 87

   51 TypeId: "target_source" .

    $default  reduce using rule 51 (TypeId)


State 88

   50 TypeId: "target_destination" .

    $default  reduce using rule 50 (TypeId)


State 89

   52 TypeId: "sound" .

    $default  reduce using rule 52 (TypeId)


State 90

   32 ClassFieldDef: Identifier "(" TypeId . ")" ":" StringLiteral DefaultValueOpt

    ")"  shift, and go to state 99


State 91

   36 ClassFieldDef: "color" "(" "choices" . ")" ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    ")"  shift, and go to state 100


State 92

   38 ModelType: "sprite" .

    $default  reduce using rule 38 (ModelType)


State 93

   37 ModelType: "studio" .

    $default  reduce using rule 37 (ModelType)


State 94

   35 ClassFieldDef: "model" "(" ModelType . ")" ":" StringLiteral DefaultValueOpt

    ")"  shift, and go to state 101


State 95

    8 PointClassDef: "@PointClass" CtorsOpt "=" Identifier ":" StringLiteral "[" ClassFieldsOpt "]" .

    $default  reduce using rule 8 (PointClassDef)


State 96

   19 BoundingBoxDefOpt: "size" "(" Number Number Number "," Number Number . Number ")"

    Number  shift, and go to state 102


State 97

   33 ClassFieldDef: Identifier "(" "flags" ")" . "=" "[" FlagsValues "]"

    "="  shift, and go to state 103


State 98

   34 ClassFieldDef: Identifier "(" "choices" ")" . ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    ":"  shift, and go to state 104


State 99

   32 ClassFieldDef: Identifier "(" TypeId ")" . ":" StringLiteral DefaultValueOpt

    ":"  shift, and go to state 105


State 100

   36 ClassFieldDef: "color" "(" "choices" ")" . ":" StringLiteral ":" Number "=" "[" EnumValues "]"

    ":"  shift, and go to state 106


State 101

   35 ClassFieldDef: "model" "(" ModelType ")" . ":" StringLiteral DefaultValueOpt

    ":"  shift, and go to state 107


State 102

   19 BoundingBoxDefOpt: "size" "(" Number Number Number "," Number Number Number . ")"

    ")"  shift, and go to state 108


State 103

   33 ClassFieldDef: Identifier "(" "flags" ")" "=" . "[" FlagsValues "]"

    "["  shift, and go to state 109


State 104

   34 ClassFieldDef: Identifier "(" "choices" ")" ":" . StringLiteral ":" Number "=" "[" EnumValues "]"

    StringLiteral  shift, and go to state 110


State 105

   32 ClassFieldDef: Identifier "(" TypeId ")" ":" . StringLiteral DefaultValueOpt

    StringLiteral  shift, and go to state 111


State 106

   36 ClassFieldDef: "color" "(" "choices" ")" ":" . StringLiteral ":" Number "=" "[" EnumValues "]"

    StringLiteral  shift, and go to state 112


State 107

   35 ClassFieldDef: "model" "(" ModelType ")" ":" . StringLiteral DefaultValueOpt

    StringLiteral  shift, and go to state 113


State 108

   19 BoundingBoxDefOpt: "size" "(" Number Number Number "," Number Number Number ")" .

    $default  reduce using rule 19 (BoundingBoxDefOpt)


State 109

   33 ClassFieldDef: Identifier "(" "flags" ")" "=" "[" . FlagsValues "]"
   39 FlagsValues: . FlagsValues FlagValue
   40            | %empty .

    $default  reduce using rule 40 (FlagsValues)

    FlagsValues  go to state 114


State 110

   34 ClassFieldDef: Identifier "(" "choices" ")" ":" StringLiteral . ":" Number "=" "[" EnumValues "]"

    ":"  shift, and go to state 115


State 111

   32 ClassFieldDef: Identifier "(" TypeId ")" ":" StringLiteral . DefaultValueOpt
   53 DefaultValueOpt: . ":" StringLiteral
   54                | . ":" Number
   55                | %empty .  [Identifier, "]", "color", "model"]

    ":"  shift, and go to state 116

    $default  reduce using rule 55 (DefaultValueOpt)

    DefaultValueOpt  go to state 117


State 112

   36 ClassFieldDef: "color" "(" "choices" ")" ":" StringLiteral . ":" Number "=" "[" EnumValues "]"

    ":"  shift, and go to state 118


State 113

   35 ClassFieldDef: "model" "(" ModelType ")" ":" StringLiteral . DefaultValueOpt
   53 DefaultValueOpt: . ":" StringLiteral
   54                | . ":" Number
   55                | %empty .  [Identifier, "]", "color", "model"]

    ":"  shift, and go to state 116

    $default  reduce using rule 55 (DefaultValueOpt)

    DefaultValueOpt  go to state 119


State 114

   33 ClassFieldDef: Identifier "(" "flags" ")" "=" "[" FlagsValues . "]"
   39 FlagsValues: FlagsValues . FlagValue
   41 FlagValue: . Number ":" StringLiteral ":" Number

    Number  shift, and go to state 120
    "]"     shift, and go to state 121

    FlagValue  go to state 122


State 115

   34 ClassFieldDef: Identifier "(" "choices" ")" ":" StringLiteral ":" . Number "=" "[" EnumValues "]"

    Number  shift, and go to state 123


State 116

   53 DefaultValueOpt: ":" . StringLiteral
   54                | ":" . Number

    StringLiteral  shift, and go to state 124
    Number         shift, and go to state 125


State 117

   32 ClassFieldDef: Identifier "(" TypeId ")" ":" StringLiteral DefaultValueOpt .

    $default  reduce using rule 32 (ClassFieldDef)


State 118

   36 ClassFieldDef: "color" "(" "choices" ")" ":" StringLiteral ":" . Number "=" "[" EnumValues "]"

    Number  shift, and go to state 126


State 119

   35 ClassFieldDef: "model" "(" ModelType ")" ":" StringLiteral DefaultValueOpt .

    $default  reduce using rule 35 (ClassFieldDef)


State 120

   41 FlagValue: Number . ":" StringLiteral ":" Number

    ":"  shift, and go to state 127


State 121

   33 ClassFieldDef: Identifier "(" "flags" ")" "=" "[" FlagsValues "]" .

    $default  reduce using rule 33 (ClassFieldDef)


State 122

   39 FlagsValues: FlagsValues FlagValue .

    $default  reduce using rule 39 (FlagsValues)


State 123

   34 ClassFieldDef: Identifier "(" "choices" ")" ":" StringLiteral ":" Number . "=" "[" EnumValues "]"

    "="  shift, and go to state 128


State 124

   53 DefaultValueOpt: ":" StringLiteral .

    $default  reduce using rule 53 (DefaultValueOpt)


State 125

   54 DefaultValueOpt: ":" Number .

    $default  reduce using rule 54 (DefaultValueOpt)


State 126

   36 ClassFieldDef: "color" "(" "choices" ")" ":" StringLiteral ":" Number . "=" "[" EnumValues "]"

    "="  shift, and go to state 129


State 127

   41 FlagValue: Number ":" . StringLiteral ":" Number

    StringLiteral  shift, and go to state 130


State 128

   34 ClassFieldDef: Identifier "(" "choices" ")" ":" StringLiteral ":" Number "=" . "[" EnumValues "]"

    "["  shift, and go to state 131


State 129

